# neuropharm-sim

./: .gitignore  README.md  pyproject.toml
data/: farde1992_haloperidol.json
neuropharm_sim/: __init__.py  circuit_model.py  drug_library.py  receptor_dynamics.py
neuropharm_sim/and_gate/: __init__.py  axes.py  gate.py
neuropharm_sim/simulation/: __init__.py  runner.py
neuropharm_sim/visualization/: __init__.py  plots.py
notebooks/: 01_circuit_demo.ipynb  02_drug_comparison.ipynb  03_and_gate_simulation.ipynb  04_benchmark_validation.ipynb
tests/: test_and_gate.py  test_circuit_model.py  test_receptor_dynamics.py
